update html and css file

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!--End Header-->
 
     <!--start section 1-->
-    <section class="s1">
+    <article class="s1">
         <div class="container">
             <div class="text">
                 <h3>Grow Together</h3>
@@ -54,11 +54,11 @@
             </div>
             <img src="images/illustration-grow-together.svg" alt="grow-together" class="grow-together" />
         </div>
-    </section>
+    </article>
     <!--start section 1-->
 
     <!--start section 2-->
-    <section class="s2">
+    <article class="s2">
         <div class="container">
             <img src="images/illustration-flowing-conversation.svg" alt="flowing-conversation" class="flowing-conversation" />
             <div class="text">
@@ -68,11 +68,11 @@
                 </p>
             </div>
         </div>
-    </section>
+    </article>
     <!--start section 2-->
 
     <!--start section 3-->
-    <section class="s3">
+    <article class="s3">
         <div class="container">
             <div class="text">
                 <h3>Your Users</h3>
@@ -82,7 +82,7 @@
             </div>
             <img src="images/illustration-your-users.svg" alt="your-users" class="your-users" />
         </div>
-    </section>
+    </article>
     <!--start section 3-->
     
     <!--start main-->
